refactor: 클럽멤버로 접근하도록 activity로직 리팩토링