@@ -5,13 +5,12 @@ import com.cumulus.backend.activity.domain.ActivityApplication;
 import com.cumulus.backend.activity.dto.*;
 import com.cumulus.backend.activity.repository.ActivityApplicationRepository;
 import com.cumulus.backend.activity.repository.ActivityRepository;
-import com.cumulus.backend.club.domain.Club;
-import com.cumulus.backend.club.repository.ClubRepository;
-import com.cumulus.backend.common.ApplyStatus;
+import com.cumulus.backend.club.domain.ClubMember;
+import com.cumulus.backend.club.repository.ClubMemberRepository;
+import com.cumulus.backend.club.domain.ApplyStatus;
 import com.cumulus.backend.exception.CustomException;
 import com.cumulus.backend.exception.ErrorCode;
 import com.cumulus.backend.user.domain.User;
-import com.cumulus.backend.user.repository.UserRepository;
 import com.cumulus.backend.user.service.UserService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,8 +21,6 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static com.cumulus.backend.exception.ErrorCode.CLUB_NOT_FOUND;
-
 @Service
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
@@ -31,10 +28,9 @@ import static com.cumulus.backend.exception.ErrorCode.CLUB_NOT_FOUND;
 public class ActivityService {
 
     private final ActivityRepository activityRepository;
-    private final UserRepository userRepository;
-    private final ClubRepository clubRepository;
     private final UserService userService;
     private final ActivityApplicationRepository activityApplicationRepository;
+    private final ClubMemberRepository clubMemberRepository;
 
     public Activity findById(Long activityId){
         return activityRepository.findOne(activityId)
@@ -42,12 +38,8 @@ public class ActivityService {
     }
 
     @Transactional
-    public Activity createActivity(ActivityCreateRequestDto activityDto, Long userId) {
+    public Activity createActivity(ActivityCreateRequestDto activityDto, ClubMember clubMember) {
         LocalDateTime createdAt = LocalDateTime.now();
-        User hostingUser = userRepository.findOne(userId)
-                .orElseThrow(()-> new CustomException(ErrorCode.USER_NOT_FOUND));
-        Club club = clubRepository.findOne(activityDto.getClubId())
-                .orElseThrow(() -> new CustomException(CLUB_NOT_FOUND));
 
         Activity activity = Activity.builder()
                 .title(activityDto.getTitle())
@@ -57,8 +49,8 @@ public class ActivityService {
                 .createdAt(createdAt)
                 .maxParticipants(activityDto.getMaxParticipants())
                 .nowParticipants(0)
-                .hostingUser(hostingUser)
-                .club(club)
+                .hostingUser(clubMember)
+                .club(clubMember.getClub())
                 .isPrivate(true) // 동아리 모임 비공개 처리
                 .build();
 
@@ -71,17 +63,16 @@ public class ActivityService {
 
     public ActivityDetailDto getActivity(Long activityId) {
         Activity activity = findById(activityId);
-
         return ActivityDetailDto.fromEntity(activity);
     }
 
     @Transactional
-    public void updateActivity(Long activityId, ActivityUpdateRequestDto activityDto, Long userId) {
+    public void updateActivity(Long activityId, ActivityUpdateRequestDto activityDto, ClubMember clubMember) {
         Activity activity = findById(activityId);
 
         // 주최자 본인인지 확인
-        if(!activity.getHostingUser().getId().equals(userId)){
-            log.error("모임수정권한 없음 - 모임주최자:{}, 수정접근자:{}",activity.getHostingUser().getId(),userId);
+        if(!activity.getHostingUser().getId().equals(clubMember.getId())){
+            log.error("모임수정권한 없음 - 모임주최자:{}, 수정접근자:{}",activity.getHostingUser().getId(),clubMember.getId());
             throw new CustomException(ErrorCode.NO_PERMISSION_ACTIVITY);
         }
 
@@ -95,12 +86,12 @@ public class ActivityService {
     }
 
     @Transactional
-    public void deleteActivity(Long activityId, Long userId) {
+    public void deleteActivity(Long activityId, ClubMember clubMember) {
         Activity activity = findById(activityId);
 
         // 주최자 본인인지 확인
-        if(!activity.getHostingUser().getId().equals(userId)){
-            log.error("모임삭제권한 없음 - 모임주최자:{}, 수정접근자:{}",activity.getHostingUser().getId(),userId);
+        if(!activity.getHostingUser().getId().equals(clubMember.getId())){
+            log.error("모임삭제권한 없음 - 모임주최자:{}, 수정접근자:{}",activity.getHostingUser().getId(),clubMember.getId());
             throw new CustomException(ErrorCode.NO_PERMISSION_ACTIVITY);
         }
 
@@ -118,25 +109,38 @@ public class ActivityService {
         return new ActivityListDto(activityDtos);
     }
 
+    // 마이페이지용 - 개설한 모임
     public ActivityListDto getActivityHosting(Long userId) {
+        // 유저가 등록된 모든 클럽멤버십 조회
         User user = userService.findById(userId);
-        List<Activity> activities = activityRepository.findByHostingUser(user);
-        List<ActivityDetailDto> activityDtos = activities.stream()
+        List<ClubMember> clubMemberships = clubMemberRepository.findAllByUser(user);
+
+        // 클럽멤버로 호스팅한 모든 모임조회
+        List<ActivityDetailDto> hostingActivities = clubMemberships.stream()
+                .flatMap(member -> activityRepository.findByHostingUser(member).stream())
                 .map(ActivityDetailDto::fromEntityWithoutDescription)
                 .collect(Collectors.toList());
 
-        return new ActivityListDto(activityDtos);
+        return new ActivityListDto(hostingActivities);
     }
 
-    public ActivityListDto getActivityWithStatus(Long userId, ApplyStatus applyStatus) {
+    // 마이페이지용 - 참여한 모임
+    public ActivityListDto getActivityWithStatus(Long userId) {
+        // 유저가 등록된 모든 클럽멤버십 조회
         User user = userService.findById(userId);
-        List<ActivityApplication> applications = activityApplicationRepository.findByUserAndStatus(user, applyStatus);
-        List<Activity> activities = applications.stream()
-                .map(ActivityApplication::getActivity)
+        List<ClubMember> clubMemberships = clubMemberRepository.findAllByUser(user);
+
+        // 클럽멤버십으로 신청한 모든 모임조회
+        List<ActivityApplication> allActivityApplications = clubMemberships.stream()
+                .flatMap(member -> activityApplicationRepository.findByApplicant(member).stream())
                 .toList();
-        List<ActivityDetailDto> activityDtos = activities.stream()
+
+        // 모임추출
+        List<ActivityDetailDto> activityDtos = allActivityApplications.stream()
+                .map(ActivityApplication::getActivity)
                 .map(ActivityDetailDto::fromEntityWithoutDescription)
-                .collect(Collectors.toList());
+                .toList();
+
         return new ActivityListDto(activityDtos);
     }
 }
